tests/negative/syntax/empty-match/test.smol
package testing;

union Empty {
}

class Test {
	fn process(empty Empty) Unit {
		match empty {
		}
	}

	fn main() Unit {

	}
}
